[gd_scene load_steps=11 format=3 uid="uid://bw8dp04js1qxe"]

[ext_resource type="Script" path="res://Scripts/starting_menu.gd" id="1_he16k"]
[ext_resource type="Texture2D" uid="uid://clfqriehbaiob" path="res://Assets/Starting_Background.png" id="2_8by2p"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3e6w5"]
texture = ExtResource("2_8by2p")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mevup"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptuls"]
bg_color = Color(0.571397, 0.150307, 0.169373, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qn7nk"]
bg_color = Color(0.44523, 0.107625, 0.123315, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k64ge"]
bg_color = Color(0.728068, 0.211223, 0.23184, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 9

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_blcwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wec3"]
bg_color = Color(0.571397, 0.150307, 0.169373, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_txqbh"]
bg_color = Color(0.44523, 0.107625, 0.123315, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 9

[node name="StartingMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_he16k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -575.0
offset_top = -324.0
offset_right = 575.0
offset_bottom = 321.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3e6w5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -83.5
offset_right = 104.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 27

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
theme_override_styles/focus = SubResource("StyleBoxEmpty_mevup")
theme_override_styles/hover = SubResource("StyleBoxFlat_ptuls")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qn7nk")
theme_override_styles/normal = SubResource("StyleBoxFlat_k64ge")
text = "Start"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
theme_override_styles/focus = SubResource("StyleBoxEmpty_blcwj")
theme_override_styles/hover = SubResource("StyleBoxFlat_3wec3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_txqbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_k64ge")
text = "Controls"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
theme_override_styles/focus = SubResource("StyleBoxEmpty_blcwj")
theme_override_styles/hover = SubResource("StyleBoxFlat_3wec3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_txqbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_k64ge")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_button_pressed_start"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_button_pressed_options"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_button_pressed_quit"]
